trunk/tests/kiama/negative/type_errors/L2/7_badcase2.ob
MODULE badcase;

VAR
    bvar : BOOLEAN;

BEGIN
    CASE 1 < 2 OF
        18 : avar := 19
    END
END badcase.
